Fix padding on mobile view of About page

--- a/styles/main.css
+++ b/styles/main.css
@@ -253,8 +253,8 @@ p.home-bio{
 
 p.bio-text {
   line-height: 1.5em;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 p.contact-body {
